# gn_build

./: .gitignore  LICENSE  README.md  gni_generator.py  nocompile.gni  vs_toolchain.py
android/: BUILD.gn
android/gradle/: gn_to_cmake.py
apple/: compile_plist.gni
config/: BUILD.gn  BUILDCONFIG.gn  arch_abi.gni  dcheck_always_on.gni
config/android/: BUILD.gn  config.gni  internal_rules.gni  rules.gni
config/apple/: symbols.gni
config/c++/: c++.gni
config/chromeos/: rules.gni
config/clang/: clang.gni
config/compiler/: BUILD.gn  compiler.gni
config/fuchsia/: generate_runner_scripts.gni
config/ios/: BUILD.gn  config.gni  find_signing_identity.py  ios_sdk.gni  ios_sdk_overrides.gni  rules.gni
config/linux/: BUILD.gn
config/mac/: BUILD.gn  mac_sdk.gni  rules.gni  symbols.gni
config/posix/: BUILD.gn
config/sanitizers/: BUILD.gn
config/win/: BUILD.gn  visual_studio_version.gni
ios/: intent_definition.gni
toolchain/: gcc_toolchain.gni  toolchain.gni  wrapper_utils.py
toolchain/android/: BUILD.gn
toolchain/apple/: linker_driver.py  toolchain.gni
toolchain/ios/: swiftc.py
toolchain/linux/: BUILD.gn
toolchain/linux/embedded/alios/: BUILD.gn
toolchain/linux/embedded/allwinner/: BUILD.gn
toolchain/linux/embedded/arm_linux/: BUILD.gn
toolchain/linux/embedded/gokeic/: BUILD.gn
toolchain/linux/embedded/hisi/: BUILD.gn
toolchain/linux/embedded/ingenic/: BUILD.gn
toolchain/linux/embedded/linaro/: BUILD.gn
toolchain/linux/embedded/myir/: BUILD.gn
toolchain/linux/embedded/neoway/: BUILD.gn
toolchain/linux/embedded/novatek/: BUILD.gn
toolchain/linux/embedded/raspberrypi/: BUILD.gn
toolchain/linux/embedded/rockchip/: BUILD.gn
toolchain/mac/: BUILD.gn  linker_driver.py
toolchain/win/: BUILD.gn  setup_toolchain.py  tool_wrapper.py
util/: append_global_list.gni  append_global_list.py  collect_exported_symbols.gni  collect_javasrc.gni  write_cmake_config.gni  write_cmake_config.py
