# Copyright 2021 Patrick Fu. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/util/append_global_list.gni")

# Template to collect the exported symbols into a global file
# located in the "$root_gen_dir/exported_symbols_list.txt"
#
# Note that it will append symbols into the same file, so you
# may need to delete the file before each build
#
# Arguments:
#
#     symbols:
#         (required), list of string, the symbols to be exported.
#
# Example:
#
#     collect_exported_symbols("objc_symbols") {
#       symbols = [
#         "_OBJC_CLASS_$_ZegoError",
#         "_OBJC_METACLASS_$_ZegoError",
#         "_OBJC_CLASS_$_ZegoUser",
#         "_OBJC_METACLASS_$_ZegoUser",
#       ]
#     }
#
template("collect_exported_symbols") {
  assert(defined(invoker.symbols),
         "symbols must be defined for $target_name")

  _values = invoker.symbols

  append_global_list(target_name) {
    filename = "exported_symbols_list.txt"
    values = _values
  }
}
