# Copyright 2017 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# This file contains arguments that subprojects may choose to override. It
# asserts that those overrides are used, to prevent unused args warnings.

declare_args() {
  # Version of iOS that we're targeting.
  #
  # You can customize the target by override this args when executing `gn gen`
  # e.g. ` gn gen out/ios --args='ios_deployment_target="11.0"' `
  ios_deployment_target = "9.0"
}
