# Copyright 2021 PatrickFu @ ZEGO. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/toolchain/gcc_toolchain.gni")

ingenic_home = getenv("INGENIC_HOME")

# ingenic-camera
gcc_toolchain("camera") {
  binprefix = "${ingenic_home}/camera/bin"
  toolprefix = "${binprefix}/mips-linux-gnu-"

  # sysroot = "--sysroot=${ingenic_home}/camera/mips-linux-gnu/libc/uclibc"
  sysroot = ""
  flags = "-ffunction-sections -fdata-sections -muclibc -std=c++11  -DNOT_SUPPORT_AF_INET6 -DNOT_SUPPORT_HTTPS -DLINUX_INGENIC"

  extra_cflags = "${sysroot} ${flags}"
  extra_cxxflags = "${sysroot} ${flags}"
  extra_ldflags = "${sysroot} -Wl,--gc-sections"

  cc = "${toolprefix}gcc"
  cxx = "${toolprefix}g++"

  ar = "${toolprefix}ar"
  ld = cxx
  nm = "${toolprefix}nm"
  strip = "${toolprefix}strip"
  readelf = "${toolprefix}readelf"

  toolchain_args = {
    current_cpu = "arm"
    current_os = "linux"
  }
}
