# Copyright 2021 PatrickFu @ ZEGO. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# import("//build/config/sysroot.gni")
import("//build/toolchain/gcc_toolchain.gni")

linaro_home = getenv("LINARO_HOME")

# linaro-v4-9-4-arm
gcc_toolchain("v4.9.4") {
  binprefix = "${linaro_home}/v4.9.4/arm-linux-gnueabi/bin"
  toolprefix = "${binprefix}/arm-linux-gnueabi-"

  cc = "${toolprefix}gcc"
  cxx = "${toolprefix}g++"

  ar = "${toolprefix}ar"
  ld = cxx
  readelf = "${toolprefix}readelf"
  nm = "${toolprefix}nm"

  toolchain_args = {
    current_cpu = "arm"
    current_os = "linux"
    is_clang = false
    sysroot = "${linaro_home}/v4.9.4/arm-linux-gnueabi/arm-linux-gnueabi/libc"
  }
}
