# Copyright 2021 PatrickFu @ ZEGO. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/toolchain/gcc_toolchain.gni")

novatek_home = getenv("NOVATEK_HOME")

# novatek-24kec
gcc_toolchain("24kec") {
  binprefix = "${novatek_home}/mipsel-24kec/usr/bin"
  toolprefix = "${binprefix}/mipsel-24kec-linux-uclibc-"

  sysroot = "--sysroot=${novatek_home}/mipsel-24kec/usr/mipsel-24kec-linux-uclibc/sysroot"
  flags = "-march=24kec -DNOT_SUPPORT_AF_INET6 -DLINUX_NOVATEK -D_GLIBCXX_USE_C99"
  extra_envcmd = "export LD_LIBRARY_PATH=${novatek_home}/mipsel-24kec/usr/lib &&"

  extra_cflags = "${sysroot} ${flags}"
  extra_cxxflags = "${sysroot} ${flags}"
  extra_ldflags = "${sysroot}"

  cc = "${toolprefix}gcc"
  cxx = "${toolprefix}g++"

  ar = "${toolprefix}ar"
  ld = cxx
  nm = "${toolprefix}nm"
  strip = "${toolprefix}strip"
  readelf = "${toolprefix}readelf"

  toolchain_args = {
    current_cpu = "arm"
    current_os = "linux"
  }
}
